=========================
Changes in lovely.testing
=========================

2009/10/30 0.1.0a3
==================

 - the postgres and mysql client libs are now only defined as extra
   dependencies, so installation of this package is also possible
   without having those libs available

 - added nginx layer see nginx.txt

2009/10/29 0.1.0a2
==================

 - added coverage

 - added MySQLDatabaseLayer

 - added mysql server

 - added PGDatabaseLayer

 - added pgsql server


2009/10/14 0.1.0a1
==================

- initial release
