@@ -27,8 +27,19 @@ And init the db.
 Now we can get a list of databases.
 
     >>> sorted(srv.listDatabases())
-    ['information_schema', 'mysql', 'test', 'testing']
+    ['mysql', 'test', 'testing']
 
+
+If no mysql server is installed on the system we will get an exception::
+
+    >>> srv.orig_method = srv.mysqld_path
+    >>> srv.mysqld_path = lambda: None
+
+    >>> srv.start()
+    Traceback (most recent call last):
+    IOError: mysqld was not found. Is a MySQL server installed?
+
+    >>> srv.mysqld_path = srv.orig_method
 
 Run SQL scripts
 ================
@@ -109,7 +120,7 @@ The simplest script is just to define a server.
     >>> main = mysql.MySQLDBScript(dbDir2, port=17777)
     >>> main.start()
     >>> sorted(main.srv.listDatabases())
-    ['information_schema', 'mysql', 'test']
+    ['mysql', 'test']
     >>> main.stop()
 
 
@@ -118,7 +129,7 @@ We can also define a database to be created upon startup.
     >>> main = mysql.MySQLDBScript(dbDir2, dbName='hoschi', port=17777)
     >>> main.start()
     >>> sorted(main.srv.listDatabases())
-    ['hoschi', 'information_schema', 'mysql', 'test']
+    ['hoschi', 'mysql', 'test']
     >>> main.stop()
 
 The database is created only one time.
@@ -135,7 +146,7 @@ And also scripts to be executed.
 Note that we used the same directory here so the other db is still there.
 
     >>> sorted(main.srv.listDatabases())
-    ['hoschi', 'hoschi2', 'information_schema', 'mysql', 'test']
+    ['hoschi', 'hoschi2', 'mysql', 'test']
 
 We can run the scripts again. Note that scripts should always be
 none-destructive. So if a schema update is due one just needs
